# cli-hask

./: CHANGELOG.md  README.md  cli-hask.cabal
.stack-work/: stack.sqlite3
.stack-work/ghci/05145ac1/: cabal_macros.h
src/: Ls.hs  Main.hs  ls.hs
tests/: Spec.hs  Test_ls.hs
